[package]
name = "distinguishing_kmers"
version = "0.1.0"
authors = ["wheaton5 <whheaton@gmail.com>"]

[dependencies]
clap = "2.32.0"
flate2 = "1.0.6"
bloom = "0.3.2"
fnv = "1.0.6"
num = "0.2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
rand = "0.5"
smallvec = "*"
bit-set = "0.4.0"
itertools = ">=0.7"
pdqsort = "*"
byteorder = "*"
debruijn = {git = "https://github.com/10XGenomics/rust-debruijn.git"}

[dev-dependencies]
pretty_assertions = "0.5"

[dependencies.boomphf]
git = "https://github.com/10XGenomics/rust-boomphf"
version = ">=0.3.1"
branch = "master"
features = ["serde", "fast-constructors"]

[dependencies.concurrent-hashmap]
version = "0.2.1"
default-features = false

[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]
